# kenyan

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f474e551f78a_create_initial_tables.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  checkin.py  garmin_activity.py  garmin_daily_stats.py  garmin_hrv.py  garmin_sleep.py  goal.py  user.py
backend/app/routers/: checkin.py  metrics.py  sync.py  user.py
backend/app/schemas/: __init__.py  checkin.py  metrics.py  sync.py  user.py
backend/app/services/: agent.py  checkin.py  context.py  garmin.py  metrics.py  user.py
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
mobile/: .env.example  App.tsx  package-lock.json  package.json
mobile/src/: theme.ts
mobile/src/api/: checkin.ts  client.ts  index.ts  metrics.ts
mobile/src/components/: ProgressBars.tsx  StorySlide.tsx
mobile/src/screens/: CheckInScreen.tsx  HomeScreen.tsx  InsightScreen.tsx
mobile/src/types/: checkin.ts  index.ts  metrics.ts
